--- a/sass/partials/_template-grid.scss
+++ b/sass/partials/_template-grid.scss
@@ -38,6 +38,21 @@
 			opacity: 1;
 		}
 	}
+	.modal-title {
+		font-size: 20px;
+	}
+	.modal-header {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	
+	}
+	.modal-body {
+		padding: 0;
+	
+	}
+	
+
+
 }
 
 
